# GAIHackathon0823

./: .gitignore  Dockerfile  GAI_Example.ipynb  README.md  docker-compose.yaml  pyproject.toml
docs/: Exemplar  README.md  goals.md  security.md
langsmith-example/: GAI-Demo-Agents_Combined_with_vector_stores_as_tools.ipynb
media-toolchain/: README.md  hello.py  pretty_print_callback_handler.py
pipelines/: GAI_Hackathon_streamlit_document_search.ipynb  app.py  requirements.txt
transcripts/: filecleaner.py  meta.md
transcripts/day0/: Boca_AI_-_Josh_EVT_LLM_talk.txt
transcripts/day1/: Talk1 - OpenAI Summit - Techstrong.txt  Talk2 - Gen Ai summit.txt  Talk3 - Room 2 pipelines.txt  Talk4 - AI summit readout.txt
transcripts/day2/: Talk_1_-_AI_workshop_day_2_-_mapping_platforms.txt
